samples/_failures_safe/1761291100_0bc0a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4bba08e.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f4bba08e.c:157:13: error: expected declaration or statement at end of input
  157 |             *column += (*pos - current_pos);
      |             ^
./samples/SAFE/__tmp_f4bba08e.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4bba08e.c:157:13: error: expected declaration or statement at end of input
